--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "easy-circular-progress": "^1.0.4",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-xhr": "^1.0.6",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
